# tourism_superai

./: .gitignore  README.md  agentic_api.py  pyproject.toml  requirements.txt  run.py
backend/: storyteller.py  trip_design.py
frontend/: demo.html
src/tourism_superai/: __init__.py  api.py  sample.env  storyteller.py  trip_design.py
tests/: test_api.py
